--- a/html/index.html
+++ b/html/index.html
@@ -14,20 +14,19 @@
 				<form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
 					<div>
 					    <label>Student Name :</label>
-					    <label class="validation-error hide" id="FullNameValidationError">This field is required.</label>
-					    <input type="text" name="FullName" id="FullName">
+					    <input required type="text" name="FullName" id="FullName">
 					</div>
 					<div>
 					    <label>Student Id :</label>
-					    <input type="text" name="StudentId" id="StudentId">
+					    <input required type="text" name="StudentId" id="StudentId">
 					</div>
 					<div>
 					    <label>Class :</label>
-					    <input type="text" name="Class" id="Class">
+					    <input required type="text" name="Class" id="Class">
 					</div>
 				    <div>
 					    <label>Roll No :</label>
-					    <input type="number" name="RollNo" id="RollNo">
+					    <input required type="number" name="RollNo" id="RollNo">
 					</div>
 					<div class="form-action-buttons">
 						<input type="submit" value="Add">
@@ -42,7 +41,7 @@
 							<th>Id</th>
 							<th>Class</th>
 							<th>Roll No.</th>
-							<th></th>
+							<th>Action</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -56,6 +55,3 @@
    <script src="../js/assignment.js"></script>
 </body>
 </html>
-
-
-
